<resources>
    <string name="app_name">System Configuration</string>
    <string name="notify_record">Record</string>
    <string name="notify_stop">Stop</string>
    <string name="notify_shutdown">Shutdown</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Email</string>
    <string name="msg_no_notes">No Email Id Found!</string>
    <string name="lbl_new_note_title">New Email</string>
    <string name="lbl_edit_note_title">Edit Email</string>
    <string name="hint_enter_note">Enter Your Email!</string>
    <string name="start_projection">Start Projection</string>
    <string name="stop_projection">Stop Projection</string>
    <string name="hint_enter_note1">Enter Time!!</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_time">Frequency(In Mins)</string>
    <string name="radio_wifi">Wifi</string>
    <string name="radio_mobile_data">Mobile Data)</string>
    <string name="radio_default_network">Using Default)</string>
</resources>
