<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    tools:context="com.example.oandshooter.view.MainActivity">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:includeFontPadding="false"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/enter_email"
        android:layout_marginTop="38dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/enter_time"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_enter_note"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:lines="2"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25sp"
        android:gravity="center_horizontal"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        android:layout_alignLeft="@+id/inputEmail"
        android:layout_alignStart="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_note1"
        android:lines="2"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginLeft="18dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_marginRight="18dp"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        android:layout_marginEnd="18dp" />





      <!--  <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />
-->

</RelativeLayout>
